// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QueryBuilderTextSearch QueryBuilderTextSearch Component Display field if match type is equals: Expect text field not to be displayed since the match type is not equals 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderTextSearch QueryBuilderTextSearch Component Display field if match type is equals: Expect text field to be displayed since match type is equals 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <input
        class="form-control"
        placeholder="Enter text search value..."
        type="text"
        value="test"
      />
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderTextSearch QueryBuilderTextSearch Component Display field if match type is in or not in: Expect text field to be displayed with a different placeholder. 1`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <input
        class="form-control"
        placeholder="Enter comma-separated values..."
        type="text"
        value="test1, test2, test3"
      />
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderTextSearch QueryBuilderTextSearch Component Display field if match type is in or not in: Expect text field to be displayed with a different placeholder. 2`] = `
<DocumentFragment>
  <div>
    <form
      action="#"
    >
      <div
        class="error-viewer"
      />
      <input
        class="form-control"
        placeholder="Enter comma-separated values..."
        type="text"
        value="test1, test2, test3"
      />
    </form>
  </div>
</DocumentFragment>
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function ContainsText (Infix) operation Normal field 1`] = `
Object {
  "match": Object {
    "data.attributes.textField.infix": Object {
      "query": "text search",
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function ContainsText (Infix) operation With relationship as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "match": Object {
              "included.attributes.name.infix": Object {
                "query": "text search",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function ContainsText (Infix) operation With relationship containing complex path as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "match": Object {
              "included.attributes.determination.scientificName.infix": Object {
                "query": "text",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "organism",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Edge cases If no field value is provided, nothing should be generated. 1`] = `Object {}`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Empty operation Normal field 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.attributes.textField",
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must": Object {
            "term": Object {
              "data.attributes.textField.keyword": "",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Empty operation With relationship as field 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "should": Array [
            Object {
              "bool": Object {
                "must_not": Object {
                  "nested": Object {
                    "path": "included",
                    "query": Object {
                      "bool": Object {
                        "must": Array [
                          Object {
                            "exists": Object {
                              "field": "includes.name",
                            },
                          },
                          Object {
                            "term": Object {
                              "included.type": "collection",
                            },
                          },
                        ],
                      },
                    },
                  },
                },
              },
            },
            Object {
              "nested": Object {
                "path": "included",
                "query": Object {
                  "bool": Object {
                    "must": Array [
                      Object {
                        "term": Object {
                          "includes.name.keyword": "",
                        },
                      },
                      Object {
                        "term": Object {
                          "included.type": "collection",
                        },
                      },
                    ],
                  },
                },
              },
            },
          ],
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function EndsWith operation Normal field 1`] = `
Object {
  "prefix": Object {
    "data.attributes.textField.prefix_reverse": "hcraes txet",
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function EndsWith operation With relationship as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "prefix": Object {
              "included.attributes.name.prefix_reverse": "hcraes txet",
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function EndsWith operation With relationship containing complex path as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "prefix": Object {
              "included.attributes.determination.scientificName.prefix_reverse": "txet",
            },
          },
          Object {
            "term": Object {
              "included.type": "organism",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Equals operation Normal field 1`] = `
Object {
  "term": Object {
    "data.attributes.textField": "text search",
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Equals operation Normal field 2`] = `
Object {
  "term": Object {
    "data.attributes.textField": "true",
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Equals operation With relationship as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "term": Object {
              "included.attributes.name.keyword": "text search",
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Equals operation With relationship as field 2`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "term": Object {
              "includes.name.keyword": "false",
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Equals operation With relationship containing complex path as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "term": Object {
              "included.attributes.determination.scientificName.keyword": "text search",
            },
          },
          Object {
            "term": Object {
              "included.type": "organism",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Exact Match operation Normal field 1`] = `
Object {
  "term": Object {
    "data.attributes.textField.keyword": "text search",
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Exact Match operation With relationship as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "term": Object {
              "includes.name.keyword": "text search",
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Not Equals operation Normal field 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "bool": Object {
          "must_not": Object {
            "term": Object {
              "data.attributes.textField": "text search",
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "exists": Object {
              "field": "data.attributes.textField",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Not Equals operation With relationship as field 1`] = `
Object {
  "bool": Object {
    "should": Array [
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "collection",
                },
              },
              "must_not": Object {
                "term": Object {
                  "includes.name": "text search",
                },
              },
            },
          },
        },
      },
      Object {
        "nested": Object {
          "path": "included",
          "query": Object {
            "bool": Object {
              "must": Object {
                "term": Object {
                  "included.type": "collection",
                },
              },
              "must_not": Object {
                "exists": Object {
                  "field": "includes.name",
                },
              },
            },
          },
        },
      },
      Object {
        "bool": Object {
          "must_not": Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        },
      },
    ],
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Not empty operation Normal field 1`] = `
Object {
  "bool": Object {
    "must": Object {
      "exists": Object {
        "field": "data.attributes.textField",
      },
    },
    "must_not": Object {
      "term": Object {
        "data.attributes.textField.keyword": "",
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function Not empty operation With relationship as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
          Object {
            "exists": Object {
              "field": "includes.name",
            },
          },
        ],
        "must_not": Object {
          "term": Object {
            "includes.name.keyword": "",
          },
        },
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function contains (wildcard) operation Normal field 1`] = `
Object {
  "wildcard": Object {
    "data.attributes.textField": Object {
      "case_insensitive": true,
      "value": "*text search*",
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function contains (wildcard) operation With relationship as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "wildcard": Object {
              "included.attributes.name.keyword": Object {
                "case_insensitive": true,
                "value": "*text search*",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function contains (wildcard) operation With relationship containing complex path as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "wildcard": Object {
              "included.attributes.determination.scientificName": Object {
                "case_insensitive": true,
                "value": "*text*",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "organism",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function in operator Normal field 1`] = `
Object {
  "bool": Object {
    "must": Object {
      "bool": Object {
        "minimum_should_match": 1,
        "should": Array [
          Object {
            "term": Object {
              "data.attributes.textField": Object {
                "case_insensitive": true,
                "value": "test1",
              },
            },
          },
          Object {
            "term": Object {
              "data.attributes.textField": Object {
                "case_insensitive": true,
                "value": "test2",
              },
            },
          },
          Object {
            "term": Object {
              "data.attributes.textField": Object {
                "case_insensitive": true,
                "value": "test3",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function not in operator Normal field 1`] = `
Object {
  "bool": Object {
    "must_not": Object {
      "bool": Object {
        "minimum_should_match": 1,
        "should": Array [
          Object {
            "term": Object {
              "data.attributes.textField": Object {
                "case_insensitive": true,
                "value": "test1",
              },
            },
          },
          Object {
            "term": Object {
              "data.attributes.textField": Object {
                "case_insensitive": true,
                "value": "test2",
              },
            },
          },
          Object {
            "term": Object {
              "data.attributes.textField": Object {
                "case_insensitive": true,
                "value": "test3",
              },
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function startsWith (prefix) operation (Non-optimized) Normal field 1`] = `
Object {
  "prefix": Object {
    "data.attributes.textField": Object {
      "case_insensitive": true,
      "value": "text search",
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function startsWith (prefix) operation (Non-optimized) With relationship as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "prefix": Object {
              "included.attributes.name": Object {
                "case_insensitive": true,
                "value": "text search",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function startsWith (prefix) operation (Non-optimized) With relationship containing complex path as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "prefix": Object {
              "included.attributes.determination.scientificName": Object {
                "case_insensitive": true,
                "value": "text",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "organism",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function startsWith (prefix) operation (Optimized) Normal field 1`] = `
Object {
  "prefix": Object {
    "data.attributes.textField.prefix": Object {
      "case_insensitive": true,
      "value": "text search",
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function startsWith (prefix) operation (Optimized) With relationship as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "prefix": Object {
              "included.attributes.name.prefix": Object {
                "case_insensitive": true,
                "value": "text search",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "collection",
            },
          },
        ],
      },
    },
  },
}
`;

exports[`QueryBuilderTextSearch transformTextSearchToDSL function startsWith (prefix) operation (Optimized) With relationship containing complex path as field 1`] = `
Object {
  "nested": Object {
    "path": "included",
    "query": Object {
      "bool": Object {
        "must": Array [
          Object {
            "prefix": Object {
              "included.attributes.determination.scientificName.prefix": Object {
                "case_insensitive": true,
                "value": "text",
              },
            },
          },
          Object {
            "term": Object {
              "included.type": "organism",
            },
          },
        ],
      },
    },
  },
}
`;
